# llmops-telemetry-command-center

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
artifacts/: decision_artifact.json  drift_report.csv  routing_backtest_summary.csv  routing_policy_use_case.csv  triage_actions_preview.csv  triage_baseline_comparison.csv  triage_threshold_curve.csv  triage_threshold_policy.json
docs/: architecture.md  artifact_manifest.md  artifact_provenance.md  data_dictionary.md  operational_boundaries.md  testing_strategy.md
scripts/: docker_smoke_test.py  run_tests.py
src/: __init__.py  charts.py  dashboard.py  data.py  metrics.py  models.py  policy.py  ui.py
src/views/: __init__.py  command.py  data_explorer.py  evidence.py  hotspots.py  overview.py  policy_lab.py  triage.py
tests/: conftest.py  test_artifact_contracts.py  test_bundle_contract.py  test_charts.py  test_command_view.py  test_data.py  test_metrics.py  test_policy.py  test_project_quality.py  test_ui.py
